--- a/samba/smb.conf
+++ b/samba/smb.conf
@@ -8,7 +8,7 @@ dns proxy = no
 
 [data]
 path = /data/
-valid users = @smbgroup
+valid users = smbuser
 guest ok = no
 writable = yes
 browsable = yes
