--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,32 @@ jobs:
           docker push $REGISTRY/$SMB_SERVICE
           docker build -t $REGISTRY/$NGINX_SERVICE -f ./nginx/Dockerfile ./nginx
           docker push $REGISTRY/$NGINX_SERVICE
+          
+  apply-terraform:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.1.7"
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - name: Initialize Terraform
+        run: terraform init
+      - name: Apply Terraform
+        run: terraform apply -auto-approve
+      - name: Get IPs of instances
+        run: |
+          ips=$(terraform output -json | jq -r '.instance_ips.value | join(",")')
+          echo "::set-output name=public_ips::$ips"
+      - name: Add SSH Keys
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          chmod 400 ~/.ssh/id_rsa
