--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,32 +10,9 @@ env:
   NGINX_SERVICE: nginx
   SMB_SERVICE: samba
 
-jobs:
-  build-image:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build And Push Docker Images
-        env:
-          REGISTRY: ${{ secrets.DOCKER_USERNAME }}
-        run: |-
-          docker build -t $REGISTRY/$BE_SERVICE:node -f ./node/Dockerfile ./node
-          docker push $REGISTRY/$BE_SERVICE:node
-          docker build -t $REGISTRY/$BE_SERVICE:php -f ./php/Dockerfile ./php
-          docker push $REGISTRY/$BE_SERVICE:php
-          docker build -t $REGISTRY/$SMB_SERVICE -f ./samba/Dockerfile ./samba
-          docker push $REGISTRY/$SMB_SERVICE
-          docker build -t $REGISTRY/$NGINX_SERVICE -f ./nginx/Dockerfile ./nginx
-          docker push $REGISTRY/$NGINX_SERVICE
-          
+jobs:     
   apply-terraform:
-    needs: build-image
+    # needs: build-image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source
@@ -66,3 +43,53 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
+  init-swarm:
+    needs: apply-terraform
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Add SSH Keys
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          chmod 400 ~/.ssh/id_rsa
+      - name: Init Docker Swarm On Instance 1
+        id: init_swarm
+        run: |
+          IPS="${{ needs.apply-terraform.outputs.public_ips }}"
+          IFS=',' read -ra ADDR <<< "$IP"
+          SWARM_IP=${ADDR[0]}
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP << 'EOF'
+            sudo apt-get update
+            sudo apt-get install docker.io -y
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker swarm init --advertise-addr=$SWARM_IP
+          EOF
+          JOIN_TOKEN=$(ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
+          echo "::set-output join_token=$JOIN_TOKEN"
+          echo "::set-output swarm_ip=$SWARM_IP"
+  join-swarm:
+    needs: init-swarm
+    runs-on: ubuntu-latest
+    steps:
+      - name: Add SSH Keys
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
+          chmod 400 ~/.ssh/id_rsa
+      - name: Instance 2 joins Docker Swarm
+        run: |
+          IPS="${{ needs.apply-terraform.outputs.public_ips }}"
+          IFS=',' read -ra ADDR <<< "$IP"
+          SWARM_IP=${ADDR[0]}
+          JOIN_IP=${ADDR[1]}
+          JOIN_TOKEN="${{ needs.init-swarm.outputs.join_token }}"
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP << EOF
+            sudo apt-get update
+            sudo apt-get install docker.io -y
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377
+          EOF
