--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,8 @@ env:
   NGINX_SERVICE: nginx
   SMB_SERVICE: samba
 
-jobs:     
-  apply-terraform:
+jobs:
+  apply_terraform:
     # needs: build-image
     runs-on: ubuntu-latest
     steps:
@@ -43,8 +43,8 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 400 ~/.ssh/id_rsa
-  init-swarm:
-    needs: apply-terraform
+  init_swarm:
+    needs: apply_terraform
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Source
@@ -57,7 +57,7 @@ jobs:
       - name: Init Docker Swarm On Instance 1
         id: init_swarm
         run: |
-          IPS="${{ needs.apply-terraform.outputs.public_ips }}"
+          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
           IFS=',' read -ra ADDR <<< "$IP"
           SWARM_IP=${ADDR[0]}
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP << 'EOF'
@@ -71,7 +71,7 @@ jobs:
           echo "::set-output join_token=$JOIN_TOKEN"
           echo "::set-output swarm_ip=$SWARM_IP"
   join-swarm:
-    needs: init-swarm
+    needs: init_swarm
     runs-on: ubuntu-latest
     steps:
       - name: Add SSH Keys
@@ -81,11 +81,11 @@ jobs:
           chmod 400 ~/.ssh/id_rsa
       - name: Instance 2 joins Docker Swarm
         run: |
-          IPS="${{ needs.apply-terraform.outputs.public_ips }}"
+          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
           IFS=',' read -ra ADDR <<< "$IP"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
-          JOIN_TOKEN="${{ needs.init-swarm.outputs.join_token }}"
+          JOIN_TOKEN="${{ needs.init_swarm.outputs.join_token }}"
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP << EOF
             sudo apt-get update
             sudo apt-get install docker.io -y
