--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,14 +57,14 @@ jobs:
           IPS="${{ needs.apply_terraform.outputs.public_ips }}"
           IFS=',' read -ra ADDR <<< "$IP"
           SWARM_IP=${ADDR[0]}
-          ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu" ubuntu@$SWARM_IP << "EOF"
+          ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu.pem" ubuntu@$SWARM_IP << "EOF"
             sudo apt-get update
             sudo apt-get install docker.io -y
             sudo systemctl start docker
             sudo systemctl enable docker
             sudo docker swarm init --advertise-addr=$SWARM_IP
           EOF
-          JOIN_TOKEN=$(ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu" ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
+          JOIN_TOKEN=$(ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu.pem" ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
           echo "join_token=$JOIN_TOKEN" >> "$GITHUB_OUTPUT"
           echo "swarm_ip=$SWARM_IP" >> "$GITHUB_OUTPUT"
 
@@ -84,7 +84,7 @@ jobs:
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
           JOIN_TOKEN="${{ needs.init_swarm.outputs.join_token }}"
-          ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu" ubuntu@$JOIN_IP << "EOF"
+          ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu.pem" ubuntu@$JOIN_IP << "EOF"
             sudo apt-get update
             sudo apt-get install docker.io -y
             sudo systemctl start docker
