--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,8 +6,34 @@ on:
       - main
 
 jobs:
+  build-image:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Build And Push Docker Images
+        env:
+          REGISTRY: ${{ secrets.DOCKER_USERNAME }}
+          BE_SERVICE: swarmtest
+          NGINX_SERVICE: nginx
+          SMB_SERVICE: samba
+        run: |-
+          docker build -t $REGISTRY/$BE_SERVICE:node -f ./node/Dockerfile ./node
+          docker push $REGISTRY/$BE_SERVICE:node
+          docker build -t $REGISTRY/$BE_SERVICE:php -f ./php/Dockerfile ./php
+          docker push $REGISTRY/$BE_SERVICE:php
+          docker build -t $REGISTRY/$SMB_SERVICE -f ./samba/Dockerfile ./samba
+          docker push $REGISTRY/$SMB_SERVICE
+          docker build -t $REGISTRY/$NGINX_SERVICE -f ./nginx/Dockerfile ./nginx
+          docker push $REGISTRY/$NGINX_SERVICE
+          
   apply_terraform:
-    # needs: build-image
+    needs: build-image
     runs-on: ubuntu-latest
     outputs:
       public_ips: ${{ steps.ids.outputs.public_ips }}
