--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,65 +6,7 @@ on:
       - main
 
 jobs:
-  build-image:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: Build And Push Docker Images
-        env:
-          REGISTRY: ${{ secrets.DOCKER_USERNAME }}
-          BE_SERVICE: swarmtest
-          NGINX_SERVICE: nginx
-          SMB_SERVICE: samba
-        run: |-
-          docker build -t $REGISTRY/$BE_SERVICE:node -f ./node/Dockerfile ./node
-          docker push $REGISTRY/$BE_SERVICE:node
-          docker build -t $REGISTRY/$BE_SERVICE:php -f ./php/Dockerfile ./php
-          docker push $REGISTRY/$BE_SERVICE:php
-          docker build -t $REGISTRY/$SMB_SERVICE -f ./samba/Dockerfile ./samba
-          docker push $REGISTRY/$SMB_SERVICE
-          docker build -t $REGISTRY/$NGINX_SERVICE -f ./nginx/Dockerfile ./nginx
-          docker push $REGISTRY/$NGINX_SERVICE
-          
-  apply_terraform:
-    needs: build-image
-    runs-on: ubuntu-latest
-    outputs:
-      public_ips: ${{ steps.ids.outputs.public_ips }}
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: "1.1.7"
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
-      - name: Initialize Terraform
-        run: terraform init
-      - name: Apply Terraform
-        run: terraform apply -auto-approve
-      - name: Copy Terraform State to S3 Bucket
-        run: |
-          aws s3 cp terraform.tfstate s3://kha-app-s3/state/
-      - name: Get IPs of instances
-        id: ids
-        run: |
-          ips=$(terraform output -json | jq -r '.instance_ips.value | join(",")')
-          echo "public_ips=$ips" >> "$GITHUB_OUTPUT"
-
   init_swarm:
-    needs: apply_terraform
     runs-on: ubuntu-latest
     outputs:
       join_token: ${{ steps.init_swarm.outputs.join_token}}
@@ -76,11 +18,11 @@ jobs:
         run: |
           cd ~/
           echo "${{secrets.SSH_PRIVATE_KEY}}" > "docker-swarm-ubuntu.pem"
-          chmod 400 "docker-swarm-ubuntu.pem"
+          sudo chmod 400 "docker-swarm-ubuntu.pem"
       - name: Init Docker Swarm On Instance 1
         id: init_swarm
         run: |
-          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
+          IPS="47.128.245.11,52.221.211.118"
           IFS=',' read -ra ADDR <<< "$IP"
           SWARM_IP=${ADDR[0]}
           ssh -tt -o StrictHostKeyChecking=no -i "docker-swarm-ubuntu.pem" ubuntu@$SWARM_IP << "EOF"
@@ -102,10 +44,10 @@ jobs:
         run: |
           cd ~/
           echo "${{secrets.SSH_PRIVATE_KEY}}" > "docker-swarm-ubuntu.pem"
-          chmod 400 "docker-swarm-ubuntu.pem"
+          sudo chmod 400 "docker-swarm-ubuntu.pem"
       - name: Instance 2 joins Docker Swarm
         run: |
-          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
+          IPS="47.128.245.11,52.221.211.118"
           IFS=',' read -ra ADDR <<< "$IP"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
