--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,39 @@ on:
       - main
 
 jobs:
+  apply_terraform:
+    # needs: build-image
+    runs-on: ubuntu-latest
+    outputs:
+      public_ips: ${{ steps.ids.outputs.public_ips }}
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: "1.1.7"
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-southeast-1
+      - name: Initialize Terraform
+        run: terraform init
+      - name: Apply Terraform
+        run: terraform apply -auto-approve
+      - name: Copy Terraform State to S3 Bucket
+        run: |
+          aws s3 cp terraform.tfstate s3://kha-app-s3/state/
+      - name: Get IPs of instances
+        id: ids
+        run: |
+          ips=$(terraform output -json | jq -r '.instance_ips.value | join(",")')
+          echo "public_ips=$ips" >> "$GITHUB_OUTPUT"
+
   init_swarm:
+    needs: apply_terraform
     runs-on: ubuntu-latest
     outputs:
       join_token: ${{ steps.init_swarm.outputs.join_token}}
@@ -17,25 +49,24 @@ jobs:
       - name: Add SSH Keys
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
       - name: Init Docker Swarm On Instance 1
         id: init_swarm
         run: |
-          IPS="47.128.245.11,52.221.211.118"
+          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
           IFS=',' read -ra ADDR <<< "$IPS"
           SWARM_IP=${ADDR[0]}
           ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP << "EOF"
-            sudo apt-get update \
-            && sudo apt-get install docker.io -y \
-            && sudo systemctl start docker \
-            && sudo systemctl enable docker \
-            && sudo docker swarm init --advertise-addr=$SWARM_IP
+            sudo apt-get update
+            sudo apt-get install docker.io -y
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker swarm init --advertise-addr=$SWARM_IP
           EOF
           JOIN_TOKEN=$(ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
           echo "join_token=$JOIN_TOKEN" >> "$GITHUB_OUTPUT"
           echo "swarm_ip=$SWARM_IP" >> "$GITHUB_OUTPUT"
-          echo "Done"
 
   join-swarm:
     needs: init_swarm
@@ -44,20 +75,19 @@ jobs:
       - name: Add SSH Keys
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
       - name: Instance 2 joins Docker Swarm
         run: |
-          IPS="47.128.245.11,52.221.211.118"
+          IPS="${{ needs.apply_terraform.outputs.public_ips }}"
           IFS=',' read -ra ADDR <<< "$IPS"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
           JOIN_TOKEN="${{ needs.init_swarm.outputs.join_token }}"
           ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP << "EOF"
-            sudo apt-get update \
-            && sudo apt-get install docker.io -y \
-            && sudo systemctl start docker \
-            && sudo systemctl enable docker \
-            && sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377 \
-            && exit
+            sudo apt-get update
+            sudo apt-get install docker.io -y
+            sudo systemctl start docker
+            sudo systemctl enable docker
+            sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377
           EOF
