--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,10 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
+      - name: Log token to S3 Bucket
+        run: |
+          echo "${{ needs.init_swarm.outputs.join_token }}" > ~/join_token.txt
+          aws s3 cp ~/join_token.txt s3://kha-app-s3/state/
       - name: Instance 2 joins Docker Swarm
         run: |
           IPS="13.212.76.134,13.212.190.63"
@@ -55,9 +59,9 @@ jobs:
           echo "$JOIN_IP"
           echo "$SWARM_IP"
           echo "sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377"
-          JOIN_TOKEN=$(echo "$JOIN_TOKEN" | tr -d '\n')
           ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP "sudo apt-get update \
             && sudo apt-get install docker.io -y \
             && sudo systemctl start docker \
-            && sudo systemctl enable docker"
-          ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP "sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377"
+            && sudo systemctl enable docker \
+            && sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377"
+      
