--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,37 +6,8 @@ on:
       - main
 
 jobs:
-  init_swarm:
-    runs-on: ubuntu-latest
-    outputs:
-      join_token: ${{ steps.init_swarm.outputs.join_token}}
-      swarm_ip: ${{ steps.init_swarm.outputs.swarm_ip }}
-    steps:
-      - name: Checkout Source
-        uses: actions/checkout@v3
-      - name: Add SSH Keys
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-      - name: Init Docker Swarm On Instance 1
-        id: init_swarm
-        run: |
-          IPS="13.212.76.134,13.212.190.63"
-          IFS=',' read -ra ADDR <<< "$IPS"
-          SWARM_IP=${ADDR[0]}
-          ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo apt-get update \
-            && sudo apt-get install docker.io -y \
-            && sudo systemctl start docker \
-            && sudo systemctl enable docker \
-            && sudo docker swarm init --advertise-addr=$SWARM_IP"
-          JOIN_TOKEN=$(ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$SWARM_IP "sudo docker swarm join-token -q worker")
-          echo "join_token=$JOIN_TOKEN" >> "$GITHUB_OUTPUT"
-          echo "swarm_ip=$SWARM_IP" >> "$GITHUB_OUTPUT"
-          echo "Done"
-
+ 
   join-swarm:
-    needs: init_swarm
     runs-on: ubuntu-latest
     steps:
       - name: Add SSH Keys
@@ -44,23 +15,13 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-southeast-1
-      - name: Log token to S3 Bucket
-        run: |
-          echo "${{ needs.init_swarm.outputs.join_token }}" > ~/join_token.txt
-          aws s3 cp ~/join_token.txt s3://kha-app-s3/state/
       - name: Instance 2 joins Docker Swarm
         run: |
           IPS="13.212.76.134,13.212.190.63"
           IFS=',' read -ra ADDR <<< "$IPS"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
-          JOIN_TOKEN="${{ needs.init_swarm.outputs.join_token }}"
+          JOIN_TOKEN="SWMTKN-1-61xxxlnoomt3k41nsptvvj514h54rc87zyjfhpradci1r02i62-ak2qhfr8d3bxp0keysglvtena"
           echo "$JOIN_TOKEN"
           echo "$JOIN_IP"
           echo "$SWARM_IP"
