--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,16 +50,17 @@ jobs:
           IFS=',' read -ra ADDR <<< "$IPS"
           SWARM_IP=${ADDR[0]}
           JOIN_IP=${ADDR[1]}
-          JOIN_TOKEN=${{ needs.init_swarm.outputs.join_token }}
+          JOIN_TOKEN="${{ needs.init_swarm.outputs.join_token }}"
           echo "$JOIN_TOKEN"
           echo "$JOIN_IP"
           echo "$SWARM_IP"
           echo "sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377"
+          FORMAT_TOKEN=$(echo $JOIN_TOKEN | tr -d '\n\r')
           ssh -tt -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ubuntu@$JOIN_IP "sudo apt-get update \
             && sudo apt-get install docker.io -y \
             && sudo systemctl start docker \
             && sudo systemctl enable docker \
-            && echo $JOIN_TOKEN \
+            && echo $FORMAT_TOKEN \
             && echo $SWARM_IP \
-            && sudo docker swarm join --token $JOIN_TOKEN $SWARM_IP:2377"
+            && sudo docker swarm join --token $FORMAT_TOKEN $SWARM_IP:2377"
       
