--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,6 +11,7 @@ http {
 
   server {
     listen 80;
+    server_name nginx.host.name;
 
     location / {
       proxy_pass http://t1_service1:8085;
